change logic of updating user